# seobju

./: README.md
.github/workflows/: deploy-pocos.yml  deploy-resume.yml
ABCOS/: .env.example  .gitignore  .replit  .vercelignore  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  vercel.json
ABCOS/api/: healthz.ts  payroll.py
ABCOS/attached_assets/: 2월_어브코스_급여명세서(사대)-수정_1775431903687.xlsx  2월_어브코스_급여명세서(프리)_1775431903680.xlsx  A파일_1775393909269.xls  Pasted--1-1-1774073553065_1774073553065.txt  Pasted--4-1-00-03--1774075792370_1774075792370.txt  Pasted--A-BC-PDF--1774065727367_1774065727368.txt  Pasted--UI-1-B--1774073780321_1774073780321.txt  Pasted--index-html-CSS-JS-UI--1774074085186_1774074085186.txt  근로소득_간이세액표_1775394651137.hwp
ABCOS/scripts/: push-to-github.bat  sync-github.ps1
ResumeConverter/: .deploy-revision  .gitignore  .vercelignore  README.md  albamon_parser.py  app.py  build_template.py  excel_layout.py  main.py  pyproject.toml  repair_template.py  replit.md  requirements-local.txt  requirements.txt  template_config.py  test_app.py  vercel.json
ResumeConverter/api/: index.py
ResumeConverter/public/: index.html
ResumeConverter/public/static/js/: script.js
ResumeConverter/scripts/: push-to-github.bat  sync-github.ps1
ResumeConverter/static/css/: style.css
ResumeConverter/templates/: index.html  resume_template.xlsx  sample.xlsx  sample_re.xlsx
pocos/: .env.example  .gitignore  index.html  package-lock.json  package.json
pocos/public/: invoice-template.xlsx  payslip-template.xlsx
pocos/scripts/: check-borders.mjs  (+11 more)
(+31 files in other folders)
