[project]
name = "resume-converter"
version = "0.1.0"
description = "SJ - 이력서변환기"
requires-python = "==3.12.*"
dependencies = [
    "blinker==1.9.0",
    "click==8.1.8",
    "et-xmlfile==2.0.0",
    "flask==3.1.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "openpyxl==3.1.5",
    "pdfminer.six==20250327",
    "pdfplumber==0.11.8",
    "pillow==11.1.0",
    "werkzeug==3.1.3",
]

[tool.vercel]
entrypoint = "main:app"

[tool.vercel.scripts]
build = "python -c \"import os; p='templates/resume_template.xlsx'; assert os.path.isfile(p), 'missing '+p; assert os.path.getsize(p)>1000, 'empty template'\""
