[project]
name = "resume-converter"
version = "0.1.0"
description = "SJ - 이력서변환기"
requires-python = "==3.12.*"
dependencies = [
    "flask==3.1.2",
    "openpyxl==3.1.5",
    "pdfplumber==0.11.8",
    "pymupdf==1.24.14",
    "pillow==11.1.0",
    "werkzeug==3.1.3",
]

[tool.vercel]
entrypoint = "app:app"
